<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">People Finder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_string">Search</string>
    <string name="title_activity_list_display">List_display</string>
    <string name="name">Name</string>
        <string name="comment">Comment</string>
        <string name="other">Others</string>
        <string name="button_comment">Comment!</string>
        <string name="blank"></string>
        <string name="id">Person Id</string>
        <string name="designation">Designation</string>
        <string name="phone">Phone</string>
        <string name="email">Email Id</string>
        <string name="submit">Submit</string>
        <string name="contact">Add Contact</string>
        <string name="ent">Enter name</string>
        <string name="idx">Enter ID</string>
        <string name="call">Call</string>
        
</resources>
